--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "nodespeak",
+  "version": "2.5.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
